crates/nash-can/src/snapshots/nash_can__module__tests__record_multiple_duplicate_fields_all_reported.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\n\ntype alias R = { x : Int, x : String, y : Int, y : String }\n"
---
[
    DuplicateField {
        name: "x",
        first: Region {
            start: Position {
                line: 3,
                column: 18,
            },
            end: Position {
                line: 3,
                column: 19,
            },
        },
        second: Region {
            start: Position {
                line: 3,
                column: 27,
            },
            end: Position {
                line: 3,
                column: 28,
            },
        },
    },
    DuplicateField {
        name: "y",
        first: Region {
            start: Position {
                line: 3,
                column: 39,
            },
            end: Position {
                line: 3,
                column: 40,
            },
        },
        second: Region {
            start: Position {
                line: 3,
                column: 48,
            },
            end: Position {
                line: 3,
                column: 49,
            },
        },
    },
]
