crates/nash-can/src/snapshots/nash_can__module__tests__recursive_alias_self.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\n\ntype alias Loop = Loop\n"
---
[
    RecursiveAlias {
        region: Region {
            start: Position {
                line: 3,
                column: 12,
            },
            end: Position {
                line: 3,
                column: 16,
            },
        },
        name: "Loop",
        args: [],
        others: [],
    },
]
