crates/nash-can/src/snapshots/nash_can__module__tests__recursive_decl_mutual_values.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\n\nx = y\n\ny = x\n"
---
[
    RecursiveDecl {
        name: Located {
            region: Region {
                start: Position {
                    line: 3,
                    column: 1,
                },
                end: Position {
                    line: 3,
                    column: 2,
                },
            },
            value: "x",
        },
        others: [
            "y",
        ],
    },
]
