crates/nash-can/src/snapshots/nash_can__module__tests__recursive_decl_self_reference.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\n\nx = x\n"
---
[
    RecursiveDecl {
        name: Located {
            region: Region {
                start: Position {
                    line: 3,
                    column: 1,
                },
                end: Position {
                    line: 3,
                    column: 2,
                },
            },
            value: "x",
        },
        others: [],
    },
]
