crates/nash-can/src/snapshots/nash_can__module__tests__shadowing_toplevel.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\n\nx = 1\n\nf =\n    let\n        x = 2\n    in\n    x\n"
---
[
    Shadowing {
        name: "x",
        original: Region {
            start: Position {
                line: 3,
                column: 1,
            },
            end: Position {
                line: 3,
                column: 2,
            },
        },
        new: Region {
            start: Position {
                line: 7,
                column: 9,
            },
            end: Position {
                line: 7,
                column: 10,
            },
        },
    },
]
